# weekly-ad-recipes

./: .gitignore  CLAUDE.md  pm2.json
server/: Cargo.toml  build-prod.sh  check_wf.py  check_wf2.py  check_wf3.py  check_wf4.py
server/.cargo/: config.toml
server/.sqlx/: query-16fc05a8de8241ba329e463f627e22d9b2744558715ffd0bbfae9a64a20d1ce4.json  query-182911f65d7c3898e7da6a8b9b20165e1370fe70aee1d2e554e39a86f01a999a.json  query-19f966730458c4d29d6b0a684b3ed941bd262e3e298065d6b46a6badaf02af9d.json  query-2549fc33613d7dc16940c3800112641fb1ec4c00f48df9b50e3699b1903d1c0d.json  query-2bf23642e3d7539033b54b11498905f0e22d7b2c4431d00a9d332f23fe0ea4aa.json  query-2cece06115a43de9f599519a8854a2dcfa407c74149191a18173047c92e6c6ac.json  query-3288968029d99c31107549308af786d8f130637c1353c53c67d05c57d24b3a29.json  query-4a50a1b158c30ca7f03f1ce4c4085579b26713ee13d0b56eac651430ae3f8fdf.json  query-4cd3f1dd76d76061eb661eec9d50a6e07135eee79739df0e6a8417658ca14e40.json  query-4d5ed654c4bf2beaf19dc3a11e89b7da732ab96470070070493f5f796923e272.json  query-53b568db3d41078e190a645366aaf7b88e44a2f89f2504484b4009ecbe73c518.json  query-5742882297b69d709cc781750e50d0cef0f0523256ec4e02ce1807013ff80e13.json  query-5b4e30d667e296752726980c0f0673be191dc58a163750b7c09cd2629b6a297b.json  query-5dee62b7b762382ff4ba9eb6df877a0edb5754b69f52712874c59630a52ad29c.json  query-686373b0faf4700b0d83e87840bc4a34248a0a67ba11b2f1d891c0dabeee5f63.json  query-78493ee961ff618587d8352e0fae9d2eb27b69979e7933f9fb20eb185788ac05.json  query-7b6c8391cf9e629496dd457e9749d4c57d973f700413796c1b3d37f9c014be4b.json  (+11 more)
(+77 files in other folders)
