[package]
name = "weekly-ad-recipes-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Flipp API + Anthropic API)
reqwest = { version = "0.11", features = ["json"] }

# Type sharing (Rust → TypeScript)
ts-rs = { version = "7", features = ["serde-compat"] }

# Environment
dotenvy = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Utilities
base64 = "0.21"
rand = "0.8"
futures = "0.3"
regex = "1"

# Headless browser (Vision fallback — requires Chromium installed, set CHROME_BIN if not on PATH)
chromiumoxide = { version = "0.5", features = ["tokio-runtime"], default-features = false }
